actually fixed tags spacing

--- a/main.css
+++ b/main.css
@@ -352,11 +352,12 @@ input,textarea{
 #tagHolder{
     display: flex;
     flex-wrap: wrap;
+    margin-left:.5em;
 }
 
 .tag{
     padding: .5em .75em;
-    margin: .25em 1em;
+    margin: .25em .5em;
     background-color: #2c2c2c;
     color:white;
     border-radius:5px;
